# Auto-GPT-Notion

./: .flake8  README.md  pyproject.toml  requirements.txt
.github/workflows/: python.yml
src/notion/: __init__.py  notion.py  test_notion.py
