[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto_gpt_notion_plugin"
version = "0.0.1"
authors = [
  { name="backdoor", email="backdoor705@proton.me" },
]
description = "Notion plugin for Auto-GPT."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/doutv/Auto-GPT-Notion"
"Bug Tracker" = "https://github.com/doutv/Auto-GPT-Notion"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = ""

[tool.isort]
profile = "black"